升级ENode到最新版本。

--- a/Forum.CommandHandlers/packages.config
+++ b/Forum.CommandHandlers/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ECommon" version="2.6.0" targetFramework="net461" />
-  <package id="ENode" version="2.9.2" targetFramework="net461" />
+  <package id="ECommon" version="2.6.4" targetFramework="net461" />
+  <package id="ENode" version="2.9.5" targetFramework="net461" />
+  <package id="System.Reflection.Emit.ILGeneration" version="4.7.0" targetFramework="net461" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.7.0" targetFramework="net461" />
 </packages>
