--- a/Forum.CommandService/packages.config
+++ b/Forum.CommandService/packages.config
@@ -1,17 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="4.6.1" targetFramework="net461" />
-  <package id="Dapper" version="1.50.2" targetFramework="net461" />
-  <package id="ECommon" version="2.6.0" targetFramework="net461" />
-  <package id="ECommon.Autofac" version="2.5.0" targetFramework="net461" />
-  <package id="ECommon.Dapper" version="2.5.1" targetFramework="net461" />
-  <package id="ECommon.JsonNet" version="2.5.0" targetFramework="net461" />
-  <package id="ECommon.Log4Net" version="2.5.2" targetFramework="net461" />
-  <package id="ENode" version="2.9.2" targetFramework="net461" />
-  <package id="ENode.EQueue" version="2.1.1" targetFramework="net461" />
-  <package id="ENode.SqlServer" version="1.0.2" targetFramework="net461" />
-  <package id="EQueue" version="2.5.9" targetFramework="net461" />
+  <package id="Autofac" version="4.9.4" targetFramework="net461" />
+  <package id="Dapper" version="2.0.30" targetFramework="net461" />
+  <package id="ECommon" version="2.6.4" targetFramework="net461" />
+  <package id="ECommon.Autofac" version="2.5.1" targetFramework="net461" />
+  <package id="ECommon.Dapper" version="2.5.2" targetFramework="net461" />
+  <package id="ECommon.JsonNet" version="2.5.1" targetFramework="net461" />
+  <package id="ECommon.Serilog" version="1.0.1" targetFramework="net461" />
+  <package id="ENode" version="2.9.5" targetFramework="net461" />
+  <package id="ENode.EQueue" version="2.1.4" targetFramework="net461" />
+  <package id="ENode.SqlServer" version="1.0.4" targetFramework="net461" />
+  <package id="EQueue" version="2.6.1" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
-  <package id="System.Data.SqlClient" version="4.4.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
+  <package id="Serilog" version="2.9.0" targetFramework="net461" />
+  <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net461" />
+  <package id="Serilog.Sinks.File" version="4.1.0" targetFramework="net461" />
+  <package id="System.Data.SqlClient" version="4.8.0" targetFramework="net461" />
+  <package id="System.Reflection.Emit.ILGeneration" version="4.7.0" targetFramework="net461" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.7.0" targetFramework="net461" />
 </packages>
