--- a/Forum.Domain.Dapper/packages.config
+++ b/Forum.Domain.Dapper/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Dapper" version="1.50.2" targetFramework="net461" />
-  <package id="ECommon" version="2.6.0" targetFramework="net461" />
-  <package id="ECommon.Dapper" version="2.5.1" targetFramework="net461" />
+  <package id="Dapper" version="2.0.30" targetFramework="net461" />
+  <package id="ECommon" version="2.6.4" targetFramework="net461" />
+  <package id="ECommon.Dapper" version="2.5.2" targetFramework="net461" />
+  <package id="System.Reflection.Emit.ILGeneration" version="4.7.0" targetFramework="net461" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.7.0" targetFramework="net461" />
 </packages>
