--- a/Forum.Web/connectionStrings.config
+++ b/Forum.Web/connectionStrings.config
@@ -1,4 +1,4 @@
 ﻿<connectionStrings>
-  <add name="enode" connectionString="Data Source=(localdb)\MSSQLLocalDB;Integrated Security=true;Initial Catalog=Forum_ENode;Connect Timeout=30;Min Pool Size=10;Max Pool Size=100;Async=True" providerName="System.Data.SqlClient" />
-  <add name="forum" connectionString="Data Source=(localdb)\MSSQLLocalDB;Integrated Security=true;Initial Catalog=Forum_Data;Connect Timeout=30;Min Pool Size=10;Max Pool Size=100;Async=True" providerName="System.Data.SqlClient" />
+  <add name="enode" connectionString="Data Source=KOTIN\MSSQLSERVER2017N;Integrated Security=true;Initial Catalog=Forum_ENode;Connect Timeout=30;Min Pool Size=10;Max Pool Size=100;Async=True" providerName="System.Data.SqlClient" />
+  <add name="forum" connectionString="Data Source=KOTIN\MSSQLSERVER2017N;Integrated Security=true;Initial Catalog=Forum_Data;Connect Timeout=30;Min Pool Size=10;Max Pool Size=100;Async=True" providerName="System.Data.SqlClient" />
 </connectionStrings>
