修复漏掉的工程

--- a/Forum.Web/Forum.Web.csproj
+++ b/Forum.Web/Forum.Web.csproj
@@ -14,12 +14,12 @@
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="5.0.1" />
     <PackageReference Include="ECommon" Version="2.6.4" />
-    <PackageReference Include="ecommon.autofac" Version="2.5.1" />
+    <PackageReference Include="Ecommon.Autofac" Version="2.5.1" />
     <PackageReference Include="ECommon.Dapper" Version="2.5.2" />
-    <PackageReference Include="ecommon.jsonnet" Version="2.5.1" />
+    <PackageReference Include="Ecommon.JsonNet" Version="2.5.1" />
     <PackageReference Include="ECommon.Serilog" Version="1.0.1" />
-    <PackageReference Include="enode" Version="2.9.5" />
-    <PackageReference Include="enode.equeue" Version="2.1.4" />
+    <PackageReference Include="ENode" Version="2.9.6" />
+    <PackageReference Include="ENode.EQueue" Version="2.1.4" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Antiforgery" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.0" />
