--- a/Forum.Web/appsettings.json
+++ b/Forum.Web/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "forum": "Data Source=KOTIN\\MSSQLSERVER2017N;Initial Catalog=Forum_Data;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;Min Pool Size=10;Max Pool Size=100;",
-    "enode": "Data Source=KOTIN\\MSSQLSERVER2017N;Initial Catalog=Forum_ENode;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;Min Pool Size=10;Max Pool Size=100;"
+    "forum": "Data Source=(localdb)\\ProjectsV13;Initial Catalog=Forum_Data;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;Min Pool Size=10;Max Pool Size=100;",
+    "enode": "Data Source=(localdb)\\ProjectsV13;Initial Catalog=Forum_ENode;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;Min Pool Size=10;Max Pool Size=100;"
   },
   "Logging": {
     "IncludeScopes": false,
