--- a/Forum.Tests/Forum.Tests.csproj
+++ b/Forum.Tests/Forum.Tests.csproj
@@ -23,14 +23,17 @@
     <PackageReference Include="ECommon.Autofac" Version="2.5.2" />
     <PackageReference Include="ecommon.jsonnet" Version="2.5.1" />
     <PackageReference Include="ECommon.Serilog" Version="1.0.2" />
-    <PackageReference Include="ENode" Version="2.9.8" />
+    <PackageReference Include="ENode" Version="3.0.0" />
     <PackageReference Include="ENode.EQueue" Version="2.1.6" />
     <PackageReference Include="ENode.SqlServer" Version="1.0.4" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.5" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
-    <PackageReference Include="MSTest.TestAdapter" Version="2.1.0" />
-    <PackageReference Include="MSTest.TestFramework" Version="2.1.0" />
-    <PackageReference Include="coverlet.collector" Version="1.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.6" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
+    <PackageReference Include="MSTest.TestAdapter" Version="2.1.2" />
+    <PackageReference Include="MSTest.TestFramework" Version="2.1.2" />
+    <PackageReference Include="coverlet.collector" Version="1.3.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
   </ItemGroup>
 
